# cqrs

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: aggregate.rs  cqrs.rs  doc.rs  error.rs  event.rs  lib.rs  mem_store.rs  registry.rs  store.rs  test.rs
tests/: lib.rs
