[package]
name = "cqrs-actors"
version = "0.0.1-alpha"
authors = [
    "Dave Garred <dave.garred@serverlesstechnology.com>",
    "Thomas Liebeskind <thomas.liebeskind@gmail.com>",
]
edition = "2021"
license = "MIT"
keywords = ["cqrs", "event-sourcing", "actors"]
description = "A lightweight, opinionated CQRS and event sourcing framework targeting serverless architectures, with actors."
documentation = "https://docs.rs/cqrs-actors"
repository = "https://github.com/thlcodes/cqrs-actors"
readme = "README.md"

[dependencies]
async-trait = "0.1.52"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
uuid = { version = "0.8.2", features = ["v4"] }
